--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "promise": "6.1.0",
     "slugid": "1.0.3",
     "through2": "^2.0.0",
+    "wolfy87-eventemitter": "^5.1.0",
     "ws": "2.2.0"
   },
   "devDependencies": {
